# kit

./: .gitignore  .typos.toml  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
alert/: Cargo.toml  build.rs
alert/src/: lib.rs
alert/src/sys/: desktop.rs  mod.rs
alert/src/sys/android/: mod.rs
alert/src/sys/apple/: Alert.swift  mod.rs
audio/: Cargo.toml  README.md  build.rs
audio/src/: lib.rs  player.rs  recorder.rs  shutdown.rs
audio/src/sys/: desktop_record.rs  mod.rs
audio/src/sys/android/: MediaSessionHelper.kt  mod.rs
audio/src/sys/apple/: AudioPlayerHelper.swift  mod.rs
audio/src/sys/linux/: mod.rs
audio/src/sys/windows/: mod.rs
biometric/: Cargo.toml  README.md  build.rs
biometric/src/: lib.rs
biometric/src/sys/: mod.rs  windows.rs
biometric/src/sys/android/: BiometricHelper.kt  mod.rs
biometric/src/sys/apple/: Biometric.swift  mod.rs
camera/: Cargo.toml  README.md  build.rs
camera/src/: lib.rs
camera/src/sys/: desktop.rs  mod.rs
camera/src/sys/android/: CameraHelper.kt  mod.rs
camera/src/sys/apple/: CameraHelper.swift  mod.rs
clipboard/: Cargo.toml  README.md  build.rs
clipboard/examples/: read_clipboard.rs
clipboard/src/: lib.rs
clipboard/src/sys/: desktop.rs  mod.rs
clipboard/src/sys/android/: ClipboardHelper.kt  mod.rs
clipboard/src/sys/apple/: clipboard.swift  mod.rs
codec/: Cargo.toml  README.md
codec/src/: av1.rs  lib.rs
codec/src/sys/: android.rs  apple.rs  mod.rs  stub.rs  windows.rs
dialog/: Cargo.toml  README.md  build.rs
dialog/src/: error.rs  lib.rs
dialog/src/sys/: desktop.rs  mod.rs
dialog/src/sys/android/: AlertHelper.kt  DialogHelper.kt  mod.rs
dialog/src/sys/apple/: Alert.swift  Dialog.swift  Printer.swift  mod.rs
fs/: Cargo.toml  README.md  build.rs
fs/src/: lib.rs
fs/src/sys/: mod.rs
fs/src/sys/android/: FsHelper.kt  mod.rs
fs/src/sys/apple/: Fs.swift  mod.rs
haptic/: Cargo.toml  README.md  build.rs
haptic/src/: lib.rs
haptic/src/sys/: mod.rs
haptic/src/sys/android/: HapticHelper.kt  mod.rs
haptic/src/sys/apple/: Haptic.swift  mod.rs
haptic/src/sys/linux/: mod.rs
haptic/src/sys/windows/: mod.rs
location/: Cargo.toml  README.md  build.rs
location/src/: android.rs  apple.rs  lib.rs  reactive.rs
location/src/sys/: mod.rs
location/src/sys/android/: LocationHelper.kt  mod.rs
location/src/sys/apple/: Location.swift  mod.rs
location/src/sys/linux/: mod.rs
location/src/sys/windows/: mod.rs
media/: Cargo.toml  README.md  build.rs
media/src/: lib.rs  player.rs
media/src/sys/: mod.rs
media/src/sys/android/: mod.rs
media/src/sys/apple/: MediaHelper.swift  mod.rs
media/src/sys/windows/: mod.rs
notification/: Cargo.toml  README.md  build.rs
notification/examples/: hello_world.rs
notification/src/: lib.rs
notification/src/sys/: mod.rs
notification/src/sys/android/: NotificationHelper.kt  mod.rs
notification/src/sys/apple/: Notification.swift  mod.rs
notification/src/sys/desktop/: mod.rs
permission/: Cargo.toml  README.md  build.rs
permission/src/: lib.rs
permission/src/sys/: mod.rs
permission/src/sys/android/: PermissionHelper.kt  mod.rs
permission/src/sys/apple/: Permission.swift  mod.rs
permission/src/sys/linux/: mod.rs
permission/src/sys/windows/: mod.rs
screen/: Cargo.toml  README.md  build.rs
screen/examples/: demo.rs
screen/src/: lib.rs
screen/src/platform/: android.rs  apple.rs  desktop.rs  mod.rs
screen/src/platform/apple/: Screen.swift  ScreenMacOS.swift
secret/: Cargo.toml  README.md
secret/src/: lib.rs
secret/src/sys/: mod.rs
secret/src/sys/android/: mod.rs
secret/src/sys/apple/: mod.rs
secret/src/sys/windows/: mod.rs
sensor/: Cargo.toml  README.md  build.rs
sensor/src/: lib.rs
sensor/src/sys/: mod.rs
sensor/src/sys/android/: SensorHelper.kt  mod.rs
sensor/src/sys/apple/: mod.rs  sensor.swift
sensor/src/sys/linux/: mod.rs
sensor/src/sys/windows/: mod.rs
src/: lib.rs
system/: Cargo.toml  README.md  build.rs
system/examples/: demo.rs
system/src/: lib.rs
system/src/sys/: mod.rs
system/src/sys/android/: SystemHelper.kt  mod.rs
system/src/sys/apple/: System.swift  mod.rs
system/src/sys/desktop/: mod.rs
tests/android/: README.md  build.gradle.kts  settings.gradle.kts
tests/android/app/: build.gradle.kts
tests/android/app/src/main/: AndroidManifest.xml
tests/android/app/src/main/kotlin/com/waterkit/test/: MainActivity.kt
tests/android/app/src/main/res/values/: strings.xml
tests/android/rust/: Cargo.toml
tests/android/rust/src/: lib.rs
tests/ios/: README.md
tests/ios/app/: Package.swift
tests/ios/app/WaterKitTest/: ContentView.swift  WaterKitTestApp.swift
tests/ios/rust/: Cargo.toml  build.rs
tests/ios/rust/src/: lib.rs
tests/macos/alert/: Cargo.toml
tests/macos/alert/src/: main.rs
tests/macos/audio/: Cargo.toml
tests/macos/audio/src/: main.rs
tests/macos/biometric/: Cargo.toml  build.rs
tests/macos/biometric/src/: main.rs
tests/macos/camera/: Cargo.toml
tests/macos/camera/src/: main.rs
tests/macos/codec/: Cargo.toml
tests/macos/codec/src/: main.rs  profiler.rs  recorder.rs
tests/macos/dialog/: Cargo.toml
tests/macos/dialog/src/: main.rs
tests/macos/location/: Cargo.toml
tests/macos/location/src/: main.rs
tests/macos/media/: Cargo.toml
tests/macos/media/src/: main.rs
tests/macos/sensor/: Cargo.toml  build.rs
tests/macos/sensor/src/: main.rs
tests/macos/video/: Cargo.toml
tests/macos/video/src/: main.rs
tests/shared/dialog-demo/: Cargo.toml
tests/shared/dialog-demo/src/: lib.rs
tools/deps_patch/futures-rustls/: .cargo_vcs_info.json  Cargo.toml
tools/waterkit-test/: Cargo.toml
tools/waterkit-test/src/: main.rs
video/: Cargo.toml  README.md
video/src/: demuxer.rs  lib.rs  muxer.rs
waterkit-build/: Cargo.toml
waterkit-build/src/: android.rs  apple.rs  lib.rs
