[workspace]
resolver = "2"
members = ["permission", "location", "media", "tests/android/rust", "tests/macos/location", "tests/macos/media", "tests/macos/alert", "haptic", "notification", "alert"]


[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Lexo Liu"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/water-rs/kit"
description = "Kit utilities and helpers for WaterUI"
keywords = ["kit", "utilities", "helpers", "waterui"]
categories = ["gui", "development-tools"]

[package]
name = "waterkit"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/water-rs/kit"
description = "Kit utilities and helpers for WaterUI"
keywords = ["kit", "utilities", "helpers", "waterui"]
categories = ["gui", "development-tools"]

[dependencies]


[workspace.dependencies]
# Cross-platform
futures = "0.3"

# Apple platforms
swift-bridge = "0.1"
swift-bridge-build = "0.1"

# Android
jni = "0.21"
android-build = "0.1"

# Windows
windows = { version = "0.58", features = ["Devices_Geolocation", "Foundation"] }

# Linux
zbus = "4"

# Testing
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }


[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"