[workspace]
resolver = "2"
members = ["permission", "location", "audio", "tests/android/rust", "tests/macos/location", "tests/macos/audio", "tests/macos/dialog", "tests/macos/biometric", "tests/macos/camera", "tests/macos/sensor", "tests/macos/codec", "tests/macos/video", "tools/waterkit-test", "haptic", "notification", "dialog", "biometric", "clipboard", "fs", "secret", "camera", "sensor", "codec", "screen", "system", "video"]


[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Lexo Liu"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/water-rs/kit"
description = "Kit utilities and helpers for WaterUI"
keywords = ["kit", "utilities", "helpers", "waterui"]
categories = ["gui", "development-tools"]

[package]
name = "waterkit"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/water-rs/kit"
description = "Kit utilities and helpers for WaterUI"
keywords = ["kit", "utilities", "helpers", "waterui"]
categories = ["gui", "development-tools"]

[dependencies]
waterkit-permission = { workspace = true, optional = true }
waterkit-location = { workspace = true, optional = true }
waterkit-audio = { workspace = true, optional = true }
waterkit-haptic = { workspace = true, optional = true }
waterkit-notification = { workspace = true, optional = true }
waterkit-dialog = { workspace = true, optional = true }
waterkit-biometric = { workspace = true, optional = true }
waterkit-clipboard = { workspace = true, optional = true }
waterkit-fs = { workspace = true, optional = true }
waterkit-secret = { workspace = true, optional = true }
waterkit-camera = { workspace = true, optional = true }
waterkit-sensor = { workspace = true, optional = true }
waterkit-codec = { workspace = true, optional = true }
waterkit-screen = { workspace = true, optional = true }
waterkit-system = { workspace = true, optional = true }
waterkit-video = { workspace = true, optional = true }

[features]
default = []
full = [
    "permission",
    "location",
    "audio",
    "haptic",
    "notification",
    "dialog",
    "biometric",
    "clipboard",
    "fs",
    "secret",
    "camera",
    "sensor",
    "codec",
    "screen",
    "system",
    "video",
]
permission = ["dep:waterkit-permission"]
location = ["dep:waterkit-location", "permission"]
audio = ["dep:waterkit-audio"]
haptic = ["dep:waterkit-haptic"]
notification = ["dep:waterkit-notification"]
dialog = ["dep:waterkit-dialog"]
biometric = ["dep:waterkit-biometric"]
clipboard = ["dep:waterkit-clipboard"]
fs = ["dep:waterkit-fs"]
secret = ["dep:waterkit-secret"]
camera = ["dep:waterkit-camera"]
sensor = ["dep:waterkit-sensor"]
codec = ["dep:waterkit-codec"]
screen = ["dep:waterkit-screen"]
system = ["dep:waterkit-system"]
video = ["dep:waterkit-video"]


[workspace.dependencies]
# Functional Crates
waterkit-permission = { path = "permission" }
waterkit-location = { path = "location" }
waterkit-audio = { path = "audio" }
waterkit-haptic = { path = "haptic" }
waterkit-notification = { path = "notification" }
waterkit-dialog = { path = "dialog" }
waterkit-biometric = { path = "biometric" }
waterkit-clipboard = { path = "clipboard" }
waterkit-fs = { path = "fs" }
waterkit-secret = { path = "secret" }
waterkit-camera = { path = "camera" }
waterkit-sensor = { path = "sensor" }
waterkit-codec = { path = "codec" }
waterkit-screen = { path = "screen" }
waterkit-system = { path = "system" }
waterkit-video = { path = "video" }

# Cross-platform
futures = "0.3"
thiserror = "2"
wgpu = "28"
metal = "0.33"

# Common
log = "0.4"
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"

# Apple
core-foundation = "0.10"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-media = "0.3"
objc2-core-video = "0.3"
objc2-video-toolbox = "0.3"
objc2-core-foundation = "0.3"
objc2-io-surface = "0.3"
objc = "0.2"

# Security
keyring = "3"


# Apple platforms
swift-bridge = "0.1"
swift-bridge-build = "0.1"

# Android
jni = "0.21"
android-build = "0.1"

# Windows
windows = { version = "0.62", features = ["Devices_Geolocation", "Foundation"] }

# Linux
zbus = "5"

# Testing
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }


# Audio/Video
rodio = "0.19"
cpal = "0.15"
mp4 = "0.14"
byteorder = "1.5"
winit = "0.30"
pollster = "0.4"
nokhwa = { version = "0.10", features = ["input-native", "output-wgpu"] }
rav1e = "0.8"
dav1d = "0.11"
media-codec = "0.8"

# System/OS
sysinfo = "0.37"
dirs = "6.0"
rfd = "0.16"
arboard = "3"
notify-rust = "4"
futures-timer = "3"
netdev = "0.40"
swift-rs = "1.0.6"

[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = { level = "warn", priority = -1 }
clippy.style = { level = "warn", priority = -1 }
clippy.correctness = { level = "warn", priority = -1 }
clippy.complexity = { level = "warn", priority = -1 }
clippy.suspicious = { level = "warn", priority = -1 }
clippy.perf = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }
clippy.nursery = { level = "warn", priority = -1 }
clippy.cargo = { level = "warn", priority = -1 }
clippy.multiple_crate_versions = "allow"