[package]
name = "waterkit-alert"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/water-rs/kit"
description = "Cross-platform native alerts/popups for WaterUI"
keywords = ["alert", "popup", "dialog", "native", "gui"]
categories = ["gui", "os"]

[lints]
workspace = true

[dependencies]
futures.workspace = true

# iOS
[target.'cfg(target_os = "ios")'.dependencies]
swift-bridge.workspace = true

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

# Desktop (macOS, Windows, Linux)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
native-dialog = "0.7"

[build-dependencies]
android-build.workspace = true

[target.'cfg(target_os = "ios")'.build-dependencies]
swift-bridge-build.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
