[package]
name = "waterkit-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/water-rs/kit"
description = "Cross-platform audio playback and recording for WaterUI"
keywords = ["audio", "recording", "playback", "microphone", "cross-platform"]
categories = ["multimedia", "gui"]

[lints]
workspace = true

[dependencies]
# Cross-platform audio playback (default features include vorbis/mp3/flac/wav)
rodio = { workspace = true }
# Cross-platform audio I/O (for recording)
cpal = { workspace = true }
# Async runtime (using workspace version but adding features)
tokio = { workspace = true, features = ["rt", "sync", "time"] }
# HTTP client
zenwave = "0.3"

[build-dependencies]
android-build.workspace = true

# Apple platforms (iOS, macOS)
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
swift-bridge.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.build-dependencies]
swift-bridge-build.workspace = true

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = ["Media_Playback", "Media_Control", "Foundation", "Storage_Streams"] }

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
zbus.workspace = true
futures.workspace = true
mpris-server = "0.9"

