[package]
name = "waterkit-biometric"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository = "https://github.com/water-rs/kit"
description = "Cross-platform biometric authentication for WaterUI"
keywords = ["biometric", "authentication", "touchid", "faceid", "windows-hello"]
categories = ["gui", "os"]

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros"] }

# Apple platforms (iOS, macOS)
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
swift-bridge.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.build-dependencies]

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

[build-dependencies]
waterkit-build.workspace = true

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = ["Security_Credentials_UI", "Foundation"] }
