[package]
name = "waterkit-camera"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/water-rs/kit"
description = "Cross-platform camera streaming for WaterUI"
keywords = ["camera", "webcam", "video", "ios", "android"]
categories = ["multimedia", "gui"]

[lints]
workspace = true

[dependencies]

# WGPU for texture integration
wgpu.workspace = true
waterkit-codec = { workspace = true, optional = true }

[build-dependencies]
android-build.workspace = true

# ... (rest of file) ...

[features]
codec = ["dep:waterkit-codec"]

# Desktop platforms (Windows, macOS, Linux) - use nokhwa
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
nokhwa = { workspace = true, features = ["input-native", "output-wgpu"] }

# Apple platforms (iOS, macOS) - use native AVCaptureSession
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
swift-bridge.workspace = true
metal.workspace = true
objc.workspace = true
core-graphics-types = "0.2"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.build-dependencies]
swift-bridge-build.workspace = true

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
