[package]
name = "waterkit-codec"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "High-performance video/image codec with hardware acceleration"
categories = ["multimedia", "encoding", "decoding"]
keywords = ["video", "audio", "codec", "hardware"]

[dependencies]
thiserror.workspace = true
log.workspace = true
cfg-if.workspace = true
rav1e = { workspace = true, optional = true }
dav1d = { workspace = true, optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2.workspace = true
objc2-video-toolbox.workspace = true
objc2-core-media.workspace = true
objc2-core-video.workspace = true
objc2-core-foundation.workspace = true
objc2-foundation.workspace = true
objc2-io-surface.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
media-codec.workspace = true
jni.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = ["Win32_Media_MediaFoundation"] }

[features]
default = ["av1"]
av1 = ["dep:rav1e", "dep:dav1d"]

[lints]
workspace = true
