[package]
name = "waterkit-codec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Cross-platform video and audio codec support"
keywords = ["codec", "video", "audio", "av1", "h264", "h265"]
categories = ["multimedia::video", "multimedia::audio"]

[dependencies]
thiserror.workspace = true

cfg-if.workspace = true
rav1e = { workspace = true, optional = true }
dav1d = { workspace = true, optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2.workspace = true
objc2-video-toolbox.workspace = true
objc2-core-media.workspace = true
objc2-core-video.workspace = true
objc2-core-foundation.workspace = true
objc2-foundation.workspace = true
objc2-io-surface.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.9", features = ["media", "api-level-29"] }
ndk-sys = "0.6"
media-codec.workspace = true
jni.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = ["Win32_Media_MediaFoundation"] }

[features]
default = ["av1"]
av1 = ["dep:rav1e", "dep:dav1d"]

[lints]
workspace = true
