[package]
name = "waterkit-dialog"
version = "0.1.0"
edition = "2024"
authors = ["Lexo Liu"]
license = "MIT"
readme.workspace = true
description = "Cross-platform native dialogs/alerts for WaterUI"
keywords = ["dialog", "alert", "popup", "gui", "native"]
categories = ["gui", "os"]
repository = "https://github.com/water-rs/kit"

[lints]
workspace = true

[dependencies]
futures = { workspace = true }

# iOS
[target.'cfg(target_os = "ios")'.dependencies]
swift-bridge.workspace = true

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

# Desktop (macOS, Windows, Linux)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rfd = { workspace = true }

[build-dependencies]
android-build.workspace = true

[target.'cfg(target_os = "ios")'.build-dependencies]
swift-bridge-build.workspace = true
