[package]
name = "waterkit-dialog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description = "Native dialogs and pickers"
keywords = ["dialog", "picker", "native", "alert"]
categories = ["os", "gui"]
repository = "https://github.com/water-rs/kit"

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
thiserror = { workspace = true }

# iOS
[target.'cfg(target_os = "ios")'.dependencies]
swift-bridge.workspace = true

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

# Desktop (macOS, Windows, Linux)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rfd = { workspace = true }

[build-dependencies]
waterkit-build.workspace = true

[target.'cfg(target_os = "ios")'.build-dependencies]
