[package]
name = "waterkit-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "File system and path utilities"
keywords = ["fs", "filesystem", "paths", "io"]
categories = ["filesystem", "gui"]

[lints]
workspace = true

[dependencies]

# Apple platforms (iOS, macOS)
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
swift-bridge = { workspace = true, features = ["async"] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.build-dependencies]

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

[build-dependencies]
waterkit-build.workspace = true

# Desktop (Windows, macOS, Linux)
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
dirs.workspace = true

# Windows specific features (if needed via rfd/dirs are usually automatic)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = ["Foundation"] }
