[package]
name = "waterkit-haptic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Cross-platform haptic feedback and vibrations"
keywords = ["haptic", "vibration", "feedback"]
categories = ["os", "gui"]

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
# Apple platforms (iOS, macOS)
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
swift-bridge.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.build-dependencies]

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

[build-dependencies]
waterkit-build.workspace = true

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = ["Devices_Haptics", "Foundation"] }

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
zbus.workspace = true
futures.workspace = true
