[package]
name = "waterkit-location"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
description = "Cross-platform location abstraction for WaterKit"
repository.workspace = true
keywords = ["location", "geolocation", "swift", "bridge"]
categories = ["api-bindings", "os::macos"]

[dependencies]
log.workspace = true
nami.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
executor-core.workspace = true
async-channel = "2.5"


[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
swift-bridge = { version = "0.1"}


[target.'cfg(target_vendor = "apple")'.build-dependencies]
swift-bridge-build = { version = "0.1" }

[features]
default = []

[lints]
workspace = true
