[package]
name = "waterkit-location"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/water-rs/kit"
description = "Cross-platform location access for WaterUI"
keywords = ["location", "gps", "geolocation", "ios", "android"]
categories = ["gui", "os"]

[lints]
workspace = true

[dependencies]
waterkit-permission = { path = "../permission" }

[build-dependencies]
android-build.workspace = true

# Apple platforms (iOS, macOS)
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
swift-bridge.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.build-dependencies]
swift-bridge-build.workspace = true

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
zbus.workspace = true
futures.workspace = true
