[package]
name = "waterkit-location"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Cross-platform location and GPS services"
keywords = ["location", "gps", "geolocation", "maps"]
categories = ["os", "gui"]

[lints]
workspace = true

[dependencies]

waterkit-permission = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
waterkit-build.workspace = true

# Apple platforms (iOS, macOS)
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
swift-bridge.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.build-dependencies]

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
zbus.workspace = true
futures.workspace = true
