[package]
name = "waterkit-notification"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "System notifications and alerts"
keywords = ["notification", "alert", "push", "toast"]
categories = ["os", "gui"]

[lints]
workspace = true

[dependencies]
# Desktop platforms (Linux, Windows, macOS)
[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
notify-rust = { workspace = true }

# iOS
[target.'cfg(target_os = "ios")'.dependencies]
swift-bridge.workspace = true

[target.'cfg(target_os = "ios")'.build-dependencies]

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

[build-dependencies]
waterkit-build.workspace = true
